Update to 1.20.6